Fix html tag spacing

--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -101,12 +101,16 @@ a {
   margin-left: -100px;
 }
 
-.middle {
+.magic {
   text-align: center;
   font-family: 'Roboto Condensed', sans-serif;
   font-size:40px;
 }
 
-
+hr {
+    width: 20px;
+    transform:rotate(90deg);
+    border: 1px solid;
+}
 
 
